# omniqubo

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  wordlist.txt
.github/workflows/: quality_checks.yml  tests.yml
docs/: conf.py  index.md  index.rst  usage.rst
examples/: advanced.py  intermediate.py  new_converter.py  simple.py
omniqubo/: constants.py  constraints.py  model.py  omniqubo.py  transpiler.py  vars.py
omniqubo/converters/: converter.py  eq_to_objective.py  ineq_to_eq.py  quadratize.py  simple_manipulation.py  utils.py  varreplace.py
omniqubo/convstep/: __init__.py  eq_to_objective.py  simple_manipulation.py  stepconvclass.py  varreplace.py
omniqubo/models/: converter.py  model.py  transpiler.py  utils.py
omniqubo/models/sympyopt/: __init__.py  constraints.py  converters.py  sympyopt.py  utils.py  vars.py
omniqubo/models/sympyopt/converter/: abs_converter.py  eq_to_objective.py  simple_manipulation.py  utils.py  varreplace.py
omniqubo/models/sympyopt/transpiler/: dimod_to_sympyopt.py  docplex_to_sympyopt.py  pulp_to_sympyopt.py  qiskit_to_sympyopt.py  sympyopt_to_bqm.py  sympyopt_to_dimod.py  sympyopt_to_qiskit.py  transpiler.py
omniqubo/omniqubo/: __init__.py  omniqubo.py  poly_simplification.py
omniqubo/sampleset/: __init__.py  dimod_import.py
omniqubo/soptconv/: __init__.py  converter.py  docplex_to_sympyopt.py  sympyopt_to_bqm.py  utils.py
omniqubo/sympyopt/: __init__.py  constraints.py  sympyopt.py  utils.py  vars.py
omniqubo/utils/: utils.py
test/: test_extendability.py  test_omniqubo.py  test_use_cases.py
test/convstep/: test_eq_to_objective.py  test_simple_manipulation.py  test_varreplace.py
test/models/: test_constraints.py  test_sympyopt.py  test_vars.py
test/models/converter/: test_eq_to_objective.py  test_ineq_to_eq.py  test_interpret.py  test_simple_manipulation.py  test_varreplace.py
test/models/transpiler/: test_docplex_to_sympyopt.py  test_sympyopt_to_bqm.py
test/omniqubo/: test_omniqubo.py
test/soptconv/: test_docplex_to_sympyopt.py
test/sympyopt/: test_constraints.py  test_sympyopt.py  test_vars.py
