[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4", "setuptools_scm_git_archive"]
build-backend = "setuptools.build_meta"

[project]
name = "omniqubo"
description = "Extensible framework for transforming optimization models to binary models"
readme = "README.md"
authors = [
    {name="Adam Glos", email="aglos@iitis.pl"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.7"
dependencies = [
    "dimod >= 0.10.7",
    "docplex >= 2.22",
    "sympy >= 1.9",
    "pandas >= 1.3.4",
    "multimethod >= 1.6",
    "pulp >= 2.6",
    "qiskit-optimization >= 0.3.1",
    "qiskit >= 0.34.2"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=6.2.5", "pytest-mock>=3.3.1", "pytest-cov[toml]>=2.12"]

[project.urls]
"Source Code" = "https://github.com/euro-hpc-pl/omniqubo"

[tool.setuptools.packages]
find = {include=["omniqubo*"]}


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''

[tool.isort]
line_length = 100
profile = "black"
filter_files = true

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "sympy",
    "dimod",
    "docplex",
    "pandas"
]
ignore_missing_imports = true


[tool.pylint.messages_control]
spelling-dict = ['en_US']
disable = "all"
enable = "C0402, C0403" 
spelling-private-dict-file = "wordlist.txt"

[tool.setuptools_scm]
