[metadata]
name = omniqubo
description = Extensible framework for transforming optimization models to binary models
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Glos
author_email = aglos@iitis.pl
license = Apache-2.0
url = https://github.com/euro-hpc-pl/omniqubo
classifiers =
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find_namespace:
python_requires = >= 3.7
install_requires =
    dimod >= 0.10.7
    docplex >= 2.22
    sympy >= 1.9
    pandas >= 1.3.4

[options.extras_require]
test = pytest>=6.2.5; pytest-mock>=3.3.1; pytest-cov>=2.12

[options.packages.find]
exclude = tests

[coverage:run]
relative_files = True
